# mines-bot

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.bat  build.sh
src/: main.rs
