[package]
name = "mines-bot"
version = "0.2.2"
authors = ["Armageddon <lunyx1337@gmail.com>"]
description = "Bot for solving Minesweeper, written in Rust with \"AutoPilot\" automation library."
edition = "2018"

[dependencies]
autopilot = "0.4.0"
image = "~0.22.5"
itertools = "^0.9.0"
ndarray = "^0.13.0"
clap = "^2.33.0"
num-traits = "^0.2.11"
num-derive = "^0.3.0"
rayon = "^1.3.0"
rand = "^0.7.3"
